--- a/.gitignore
+++ b/.gitignore
@@ -41,18 +41,13 @@ test/**/*.js
 test/**/*.js.map
 
 # Test
-/coverage
-/stdout
-/stderr
-/es6/
-/lib/
-/dts/
 /.tmp
-/.nyc_output/
+/.nyc_output
 
 # IDE
 .vscode
 .idea
 
 # Project
-public
+/public
+/dist
