--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,32 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "outDir": "./dist",
+    "module": "commonjs",
     "target": "es2016",
+    "sourceMap": true,
+    "declaration": false,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "moduleResolution": "node",
+    "isolatedModules": false,
+    "suppressImplicitAnyIndexErrors": false,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "importHelpers": true,
+    "newLine": "LF",
+    "noEmit": true,
+    "resolveJsonModule": true,
     "lib": [
-      "es2016",
-      "dom"
+      "es7",
+      "dom",
+      "esnext.asynciterable"
     ],
     "typeRoots": [
       "./node_modules/@types"
-    ],
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "sourceMap": true,
-    "declaration": false,
-    "allowSyntheticDefaultImports": true
+    ]
   },
   "include": [
     "./src/**/*.ts"
@@ -26,5 +36,8 @@
     "./public",
     "dist",
     "test"
-  ]
+  ],
+  "linterOptions": {
+    "exclude": []
+  }
 }
